automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -665,7 +665,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "range(0, 8)"
+   ]
   },
   {
    "cell_type": "raw",
