automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -662,21 +662,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "illegal target for annotation (<ipython-input-32-443a48bd47f9>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-33-ed465e7d33fc>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-443a48bd47f9>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    0: 8\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m illegal target for annotation\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-ed465e7d33fc>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    8!\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
-   "source": [
-    "0: 8"
-   ]
+   "source": []
   },
   {
    "cell_type": "raw",
